# oca-brand

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
account_brand/: README.rst
account_brand/i18n/: account_brand.pot  de.po  es.po  es_AR.po  hr.po  it.po  nl.po  zh_CN.po
account_brand/readme/: CONFIGURE.md
account_brand/static/description/: index.html
account_brand/views/: account_move_views.xml
analytic_brand/: README.rst
analytic_brand/i18n/: analytic_brand.pot  it.po
analytic_brand/static/description/: index.html
brand/i18n/: brand.pot  de.po  es.po  es_AR.po  fr.po  fr_FR.po  hr.po  it.po  nl.po  pl.po  pt.po
brand_external_report_layout/: README.rst  __manifest__.py
brand_external_report_layout/i18n/: brand_external_report_layout.pot  es.po  es_AR.po  hr.po  it.po  nl.po
brand_external_report_layout/static/description/: index.html
product_brand/i18n/: ca.po  de.po  es.po  es_AR.po  fr.po  fr_FR.po  hr.po  it.po  nb_NO.po  nl.po  nl_NL.po  pl.po  pt.po  pt_BR.po  sl.po
sale_brand/: README.rst
sale_brand/i18n/: hr.po  nl.po  sale_brand.pot
sale_brand/static/description/: index.html
setup/_metapackage/: pyproject.toml
