[project]
name = "odoo-addons-oca-brand"
version = "17.0.20250101.0"
dependencies = [
    "odoo-addon-analytic_brand>=17.0dev,<17.1dev",
    "odoo-addon-brand>=17.0dev,<17.1dev",
    "odoo-addon-product_brand>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
